Added task prefix in API path
